--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <h2>web</h2>
 <p>WWW" and "The Web" redirect here. For other uses of WWW, see WWW (disambiguation). For uses of web, see Web (disambiguation).
 For the first web software, see WorldWideWeb.
-Not to be confused with the Internet.</p>
+Not to be confused with the Internet.22222</p>
 </body>
 </html>
