--- a/1.html
+++ b/1.html
@@ -1,19 +1,76 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1 - html</title>
-<meta charset="utf-8">
+  <title>WEB1 - html
+  </title>
+  <meta charset="utf-8">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R72KTYF69R"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-R72KTYF69R');
+</script>
+
 <body>
-<h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">css</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>HTML</h2>
-<p>hello web<a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
-target="_blank" title="html5 speicification">이런 강의를 무료로 볼수 있는 것도 모자라서 심지어 재미있다니...</a> <strong>선생님 제 절 <u>받으십시오</u> ㅠㅠㅠ</strong>감사합니다!!</p><p>평생 디자인을 공부해오다, 미국에서 ux라는 분야를 공부하는 와중에 접하게 되었습니다. 듣는 사람으로 하여금 의지력과 성취감을 느끼고 잘 따라올 수 있도록, 모든 것들이 아주 계획적으로 잘 짜여진 느낌이 드네요. 정말 감사드립니다.</p>
-<img src="coding.jpg" width="100%">
+  <h1>
+    <a href="index.html">WEB</a>
+  </h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">css</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <h2>HTML</h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+  <p>hello web<a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
+    target="_blank" title="html5 speicification">이런 강의를 무료로 볼수 있는 것도 모자라서 심지어 재미있다니...</a> <strong>선생님 제 절 <u>받으십시오</u> ㅠㅠㅠ</strong>감사합니다!!</p><p>평생 디자인을 공부해오다, 미국에서 ux라는 분야를 공부하는 와중에 접하게 되었습니다. 듣는 사람으로 하여금 의지력과 성취감을 느끼고 잘 따라올 수 있도록, 모든 것들이 아주 계획적으로 잘 짜여진 느낌이 드네요. 정말 감사드립니다.</p>
+    <img src="coding.jpg" width="100%">
+
+    <<p>
+      <div id="disqus_thread"></div>
+      <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://web-1-tmggknhdfh.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+  <p>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/6389b806daff0e1306da8f34/1gj8vdmhh';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
+
+
+  </p>
 </body>
 </html>
