--- a/1.html
+++ b/1.html
@@ -4,6 +4,9 @@
   <title>WEB1 - html
   </title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="colors.js"></script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R72KTYF69R"></script>
@@ -19,15 +22,22 @@ gtag('config', 'G-R72KTYF69R');
   <h1>
     <a href="index.html">WEB</a>
   </h1>
+  <input type="button" value="night" onclick="
+   nightDayHandler(this);
+   ">
+  <div id="grid">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">css</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
+  <div id="article">
   <h2>HTML</h2>
   <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
+</div>
+</div>
   <p>hello web<a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
     target="_blank" title="html5 speicification">이런 강의를 무료로 볼수 있는 것도 모자라서 심지어 재미있다니...</a> <strong>선생님 제 절 <u>받으십시오</u> ㅠㅠㅠ</strong>감사합니다!!</p><p>평생 디자인을 공부해오다, 미국에서 ux라는 분야를 공부하는 와중에 접하게 되었습니다. 듣는 사람으로 하여금 의지력과 성취감을 느끼고 잘 따라올 수 있도록, 모든 것들이 아주 계획적으로 잘 짜여진 느낌이 드네요. 정말 감사드립니다.</p>
     <img src="coding.jpg" width="100%">
