--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <title>WEB1 - welcome</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="colors.js"></script>
 </head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R72KTYF69R"></script>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+   nightDayHandler(this);
+   ">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">css</a></li>
