web2 자바스크립트 까지 다보고 수정한것

--- a/1.html
+++ b/1.html
@@ -22,7 +22,7 @@ gtag('config', 'G-R72KTYF69R');
   <h1>
     <a href="index.html">WEB</a>
   </h1>
-  <input type="button" value="night" onclick="
+  <input id="night_day" type="button" value="night" onclick="
    nightDayHandler(this);
    ">
   <div id="grid">
