--- a/2.html
+++ b/2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type="button" value="night" onclick="
+  <input id="night_day" type="button" value="night" onclick="
    nightDayHandler(this);
    ">
   <div id="grid">
