--- a/3.html
+++ b/3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type="button" value="night" onclick="
+  <input id="night_day" type="button" value="night" onclick="
    nightDayHandler(this);
   ">
   <ol>
@@ -19,18 +19,7 @@
   <h2>JavaScript</h2>
   <p>JavaScript (JS)는 가벼운, 인터프리터 혹은 just-in-time 컴파일 프로그래밍 언어로, 일급 함수를 지원합니다. 웹 페이지를 위한 스크립트 언어로 잘 알려져 있지만, Node.js, Apache CouchDB, Adobe Acrobat처럼 많은 비 브라우저 환경에서도 사용하고 있습니다. JavaScript는 프로토타입 기반, 다중 패러다임, 단일 스레드, 동적 언어로, 객체지향형, 명령형, 선언형(함수형 프로그래밍 등) 스타일을 지원합니다. 자세한 내용은 JavaScript에 대하여를 참고하세요.
   </p>
-  <<p>
-    <input type="button" value="night" onclick="
-      if (this.value === 'night') {
-          document.querySelector('body').style.backgroundColor = 'black';
-          document.querySelector('body').style.color = 'white';
-          this.value = 'day';
-        }
-        else {
-          document.querySelector('body').style.backgroundColor = 'white';
-          document.querySelector('body').style.color = 'black';
-          this.value = 'night';
-        }">
+  <p>
     <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -41,12 +30,12 @@
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
   */
-  (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://web-1-tmggknhdfh.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-  })();
+  // (function() { // DON'T EDIT BELOW THIS LINE
+  //   var d = document, s = d.createElement('script');
+  //   s.src = 'https://web-1-tmggknhdfh.disqus.com/embed.js';
+  //   s.setAttribute('data-timestamp', +new Date());
+  //   (d.head || d.body).appendChild(s);
+  // })();
 
   // function onClick() {
   //   if (document.querySelector('#night_day').value === 'night') {
@@ -60,11 +49,11 @@
   //     document.querySelector('#night_day').value = 'night';
   //   }
   // }
-  function createNode(innerText) {
-    var tempNode = document.createElement("p");
-    tempNode.innerText = innerText;
-    document.body.appendChild(tempNode);
-  }
+  // function createNode(innerText) {
+  //   var tempNode = document.createElement("p");
+  //   tempNode.innerText = innerText;
+  //   document.body.appendChild(tempNode);
+  // }
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
