--- a/ex6.html
+++ b/ex6.html
@@ -10,8 +10,8 @@
     <<script>
       var coworkers = ["egoing", "leezche"];
     </script>
-    <<h2>get</h2>
-    <<script>
+    <h2>get</h2>
+    <script>
       document.write(coworkers[0]);
       document.write(coworkers[1]);
     </script>
