--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type="button" value="night" onclick="
+  <input id="night_day" type="button" value="night" onclick="
    nightDayHandler(this);
    ">
   <ol>
